--- a/Android/app/src/main/res/layout/activity_student_profile.xml
+++ b/Android/app/src/main/res/layout/activity_student_profile.xml
@@ -6,4 +6,32 @@
     android:layout_height="match_parent"
     tools:context="com.example.optimus.tezattendance.StudentProfile">
 
+
+    <TextView
+        android:id="@+id/textViewStudentRoll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/listViewAttendance"
+        app:layout_constraintEnd_toEndOf="@+id/listViewAttendance"
+        app:layout_constraintStart_toStartOf="@+id/listViewAttendance"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/listViewAttendance"
+        android:layout_width="368dp"
+        android:layout_height="381dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
 </android.support.constraint.ConstraintLayout>
