--- a/Android/app/src/main/res/layout/activity_student_profile.xml
+++ b/Android/app/src/main/res/layout/activity_student_profile.xml
@@ -11,12 +11,12 @@
         android:id="@+id/textViewStudentRoll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="48dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/listViewAttendance"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGetAttendance"
         app:layout_constraintEnd_toEndOf="@+id/listViewAttendance"
         app:layout_constraintStart_toStartOf="@+id/listViewAttendance"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,6 +32,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/buttonGetAttendance"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_marginBottom="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:background="@color/colorAccent"
+        android:text="Button"
+        android:textColor="#FFF"
+        app:layout_constraintBottom_toTopOf="@+id/listViewAttendance"
+        app:layout_constraintEnd_toEndOf="@+id/listViewAttendance"
+        app:layout_constraintStart_toStartOf="@+id/listViewAttendance" />
 
 
 </android.support.constraint.ConstraintLayout>
