--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="FFF
-"
+    android:background="#FFF"
+
 
     tools:context="com.example.optimus.tezattendance.LoginActivity">
 
@@ -22,7 +22,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        back
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -54,6 +54,7 @@
             android:inputType="textPassword" />
 
         <Button
+            android:id="@+id/buttonSignin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
