--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="FFF
-"
+    android:background="#FFF"
 
     tools:context="com.example.optimus.tezattendance.LoginActivity">
 
@@ -22,7 +21,6 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        back
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -32,12 +30,13 @@
         android:layout_marginStart="30dp"
         android:background="@drawable/trans_white_rectangle"
 
-        android:backgroundTint="#FFF"
+        android:backgroundTint="#fff"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -46,6 +45,7 @@
             android:inputType="textEmailAddress" />
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,8 +54,9 @@
             android:inputType="textPassword" />
 
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:id="@+id/buttonSignin"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginBottom="16dp"
             android:layout_marginTop="20dp"
@@ -73,8 +74,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up"
-            android:textAlignment="center" 
-            />
+            android:layout_gravity="center"
+            android:textAlignment="center" />
 
     </LinearLayout>
 
