--- a/Android/app/src/main/res/layout/activity_main.xml
+++ b/Android/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
         tools:layout_editor_absoluteY="213dp">
 
 
+
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,6 +31,7 @@
             android:inputType="textPersonName" />
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,6 +48,7 @@
             android:entries="@array/tpye" />
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextIDD"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
@@ -54,6 +58,7 @@
             android:hint = "Enter ID"/>
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextPasswordReg"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
@@ -63,6 +68,7 @@
             android:hint = "Enter Password" />
 
         <EditText
+            android:background="@drawable/edittextstyle"
             android:id="@+id/editTextClassNameReg"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
@@ -77,7 +83,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:text="Register User" />
+            android:background="@drawable/register_button"
+            android:text="Register User"
+            android:textColor="#ffffff"/>
 
         <TextView
             android:id="@+id/textViewLogin"
