--- a/Android/app/src/main/res/layout/activity_profile.xml
+++ b/Android/app/src/main/res/layout/activity_profile.xml
@@ -288,22 +288,23 @@
         android:text="Chat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/buttonAddNews"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.272"
         app:layout_constraintStart_toStartOf="@+id/linear_layout_botom"
         app:layout_constraintTop_toBottomOf="@+id/linear_layout_botom"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/buttonAddNews"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="52dp"
         android:layout_marginTop="8dp"
         android:text="Add News"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_layout_botom" />
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_botom"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
