--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -9,6 +9,7 @@
 
     tools:context="com.example.optimus.tezattendance.LoginActivity">
 
+    <!--
     <ImageView
         android:id="@+id/formLogo"
         android:layout_width="match_parent"
@@ -20,6 +21,7 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="31dp" />
 
+    -->
     <LinearLayout
         android:id="@+id/linearLayout"
 
@@ -74,8 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sign Up"
-            android:textAlignment="center" 
-            />
+            android:textAlignment="center" />
 
     </LinearLayout>
 
