--- a/Android/app/src/main/res/layout/activity_register_student.xml
+++ b/Android/app/src/main/res/layout/activity_register_student.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:id="@+id/editTextTakeId"
+        android:background="@drawable/edittextstyle"
         android:layout_width="215dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
@@ -25,7 +26,9 @@
 
     <Button
         android:id="@+id/buttonSendId"
-        android:layout_width="wrap_content"
+        android:background="@drawable/register_button"
+        android:layout_width="150dp
+"
         android:layout_height="wrap_content"
         android:layout_marginBottom="220dp"
         android:layout_marginEnd="8dp"
@@ -72,7 +75,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Enter student id"
-        android:textSize="15dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/editTextTakeId"
         app:layout_constraintEnd_toEndOf="@+id/editTextTakeId"
         app:layout_constraintHorizontal_bias="0.0"
