--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -68,7 +68,7 @@
         <Button
             android:id="@+id/buttonSignin"
 
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="match_parent"
 
             android:layout_gravity="center"
