--- a/Android/app/src/main/res/layout/activity_register_class.xml
+++ b/Android/app/src/main/res/layout/activity_register_class.xml
@@ -14,7 +14,10 @@
         android:orientation="vertical">
 
         <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/editTextClassName"
+            android:background="@drawable/edittextstyle"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -26,27 +29,39 @@
         <ListView
             android:id="@+id/listViewSubjects"
             android:layout_width="368dp"
-            android:layout_height="320dp"
+            android:layout_height="250dp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="116dp" />
 
         <EditText
+            android:layout_marginTop="10dp"
             android:id="@+id/editTextSubjectName"
-            android:layout_width="match_parent"
+            android:background="@drawable/edittextstyle"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Subject Name" />
 
         <Button
+            android:layout_marginTop="10dp"
             android:id="@+id/buttonAddSubject"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Add Subject" />
+            android:layout_gravity="center"
+            android:background="@drawable/register_button"
+            android:text="Add Subject"
+            android:textColor="@color/backgroundcolor" />
 
         <Button
             android:id="@+id/buttonRegisterClass"
-            android:layout_width="match_parent"
+            android:textColor="@color/backgroundcolor"
+            android:background="@drawable/register_button"
+
+            android:layout_marginTop="10dp"
+            android:layout_width="200dp"
+            android:layout_gravity="center"
             android:layout_height="wrap_content"
             android:text="Register Class" />
 
