--- a/Android/app/src/main/res/layout/activity_upload_proxy.xml
+++ b/Android/app/src/main/res/layout/activity_upload_proxy.xml
@@ -13,38 +13,45 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Class Name"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextRollNumberUpload"
         app:layout_constraintEnd_toEndOf="@+id/editTextRollNumberUpload"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editTextRollNumberUpload"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.69" />
 
     <EditText
         android:id="@+id/editTextRollNumberUpload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="24dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Roll Number"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextSubjectNameUpload"
         app:layout_constraintEnd_toEndOf="@+id/editTextSubjectNameUpload"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/editTextSubjectNameUpload" />
 
     <EditText
         android:id="@+id/editTextSubjectNameUpload"
         android:layout_width="213dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="20dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="Subject Name"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/buttonCheckAttendanceUpload"
         app:layout_constraintEnd_toEndOf="@+id/buttonCheckAttendanceUpload"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/buttonCheckAttendanceUpload" />
 
     <TextView
@@ -65,28 +72,33 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/edittextstyle"
         android:ems="10"
-        android:inputType="textPersonName"
         android:hint="New Attendance"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/buttonUpdateAttendance"
         app:layout_constraintEnd_toEndOf="@+id/buttonCheckAttendanceUpload"
+        app:layout_constraintHorizontal_bias="0.652"
         app:layout_constraintStart_toStartOf="@+id/buttonCheckAttendanceUpload" />
 
     <Button
         android:id="@+id/buttonCheckAttendanceUpload"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:background="@drawable/register_button"
         android:text="Check Attendance"
+        android:textColor="@color/backgroundcolor"
         app:layout_constraintBottom_toTopOf="@+id/textViewCurrentAttendanceUpload"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonUpdateAttendance"
-        android:layout_width="wrap_content"
+        android:background="@drawable/register_button"
+        android:layout_width="200dp"
+        android:textColor="@color/backgroundcolor"
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:layout_marginEnd="8dp"
